infrastructure/k8s-prod/ingress-srv.yaml
#? Basic commands must be executed from the website......
apiVersion: extensions/v1beta1 # this apiVersion is expired but this is the only one working
kind: Ingress
metadata: #meta
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # rewriting target
spec:
  rules:
    - host: www.zohaib-x.com
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-service # actual service file name
              servicePort: 3000 # actual service file port
          - path: /api/accounts/?(.*)
            backend:
              serviceName: accounts-service # actual service file name
              servicePort: 3000 # actual service file port
          - path: /api/courses/?(.*)
            backend:
              serviceName: courses-service # actual service file name
              servicePort: 3000 # actual service file port
          - path: /?(.*) # idk but ssr is not leaving this exact route
            backend:
              serviceName: ssr-service # actual service file name
              servicePort: 3000 # actual service file port
          # just do it on last 
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.zohaib-x.com'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
